objects/Book__c.object
<CustomObject>
    <description>Google Library Books</description>
    <fields>
        <fullName>Author__c</fullName>
        <description>Book Author</description>
        <label>Author</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverImage__c</fullName>
        <description>Book Cover Image</description>
        <label>CoverImage</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Book Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <description>Book ISBN</description>
        <label>ISBN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings__c</fullName>
        <description>Book Ratings</description>
        <label>Ratings</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Book Title</description>
        <externalId>true</externalId>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>